Scheduler, tests